<resources>
    <string name="app_name">Bike</string>
    <string name="tracking">Tracking active</string>
    <string name="paused">Paused</string>
    <string name="ready">Ready</string>
    <string name="permission_denied">Location permission denied</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="reset">Reset</string>
    <string name="speed_unit">km/h</string>
    <string name="avg_label">Avg:</string>
    <string name="max_label">Max:</string>
</resources>
